--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
             علی قدوسی بهترین آشپز ایران و خاورمیانه است. وی توانسته تا کنون هزار برنامه تلویزیونی را اجرا کند، خانم
             های زیادی به وی ابراز علاقه میکنند ولی ایشان هیچ علاقه ای به آنها ندارد، علی از یکی خوشش می آید ولی آن
             طرف مقابل حسی به علی ندارد. علی قدوسی بهترین آشپز ایران و خاورمیانه است. وی توانسته تا کنون هزار برنامه
-            تلویزیونی را اجرا کند، خانم های زیادی به وی ابراز علاقه میکنند ولی ایشان هیچ علاقه ای به آنها ندارد، علی
-            از یکی خوشش می آید ولی آن طرف مقابل حسی به علی ندارد.
+            تلویزیونی را اجرا کند، 
         </p>
         <div class="stars">
             <i class="fa fa-star star"></i>
